--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
-    <link rel="stylesheet" href="../CSS/ToDoListApplication.css">
     <style>
         * {
             margin: 0;
@@ -20,6 +19,9 @@
             height: 100vh;
             overflow: hidden;
             background: linear-gradient(135deg, #f5af19, #f12711);
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         ::selection {
@@ -30,10 +32,28 @@
         .wrapper {
             max-width: 405px;
             background: #fff;
-            margin: 137px auto;
             border-radius: 7px;
             padding: 28px 0 30px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        .title {
+            font-size: 24px;
+            margin-bottom: 20px;
+            animation: fadeIn 2s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         .task-input {
@@ -274,6 +294,7 @@
 
 <body>
     <div class="wrapper">
+        <div class="title">ToDo List Application</div>
         <div class="task-input">
             <ion-icon name="create-outline"></ion-icon>
             <input type="text" placeholder="Add a New Task + Enter">
@@ -288,8 +309,8 @@
         </div>
         <ul class="task-box"></ul>
     </div>
-    <script>
 
+    <script>
         const taskInput = document.querySelector(".task-input input"),
             filters = document.querySelectorAll(".filters span"),
             clearAll = document.querySelector(".clear-btn"),
@@ -316,18 +337,18 @@
                     let completed = todo.status == "completed" ? "checked" : "";
                     if (filter == todo.status || filter == "all") {
                         liTag += `<li class="task">
-                        <label for="${id}">
-                            <input onclick="updateStatus(this)" type="checkbox" id="${id}" ${completed}>
-                            <p class="${completed}">${todo.name}</p>
-                        </label>
-                        <div class="settings">
-                            <i onclick="showMenu(this)" class="uil uil-ellipsis-h"></i>
-                            <ul class="task-menu">
-                                <li onclick='editTask(${id}, "${todo.name}")'><i class="uil uil-pen"></i>Edit</li>
-                                <li onclick='deleteTask(${id}, "${filter}")'><i class="uil uil-trash"></i>Delete</li>
-                            </ul>
-                        </div>
-                    </li>`;
+                            <label for="${id}">
+                                <input onclick="updateStatus(this)" type="checkbox" id="${id}" ${completed}>
+                                <p class="${completed}">${todo.name}</p>
+                            </label>
+                            <div class="settings">
+                                <i onclick="showMenu(this)" class="uil uil-ellipsis-h"></i>
+                                <ul class="task-menu">
+                                    <li onclick='editTask(${id}, "${todo.name}")'><i class="uil uil-pen"></i>Edit</li>
+                                    <li onclick='deleteTask(${id}, "${filter}")'><i class="uil uil-trash"></i>Delete</li>
+                                </ul>
+                            </div>
+                        </li>`;
                     }
                 });
             }
@@ -403,7 +424,6 @@
         });
     </script>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons.js"></script>
-    <script src="../JS/ToDoListApplication.js"></script>
 </body>
 
 </html>
